objects/LAT_BR_TPL_TerritoryPlanning__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BR_AttentionPointsCurrentSI__c</fullName>
        <label>BR Attention Points Current Month SI</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_AttentionPointsCurrentSO__c</fullName>
        <label>BR Attention Points Current Month SO</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_AttentionPointsPreviousSI__c</fullName>
        <label>BR Attention Points Previous Month SI</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_AttentionPointsPreviousSO__c</fullName>
        <label>BR Attention Points Previous Month SO</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_NegativePointsCurrentSI__c</fullName>
        <label>BR Negative Points Current Month SI</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_NegativePointsCurrentSO__c</fullName>
        <label>BR Negative Points Current Month SO</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_NegativePointsPreviousSI__c</fullName>
        <label>BR Negative Points Previous Month SI</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_NegativePointsPreviousSO__c</fullName>
        <label>BR Negative Points Previous Month SO</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_PlanningMonth__c</fullName>
        <formula>TEXT(LAT_BR_VisitPlanning__r.M_s_de_Ref_rencia__c)</formula>
        <label>BR Planning Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_PlanningYear__c</fullName>
        <formula>TEXT(LAT_BR_VisitPlanning__r.Ano_de_Referencia__c)</formula>
        <label>BR Planning Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_PositivePointCurrentSI__c</fullName>
        <label>BR Positive Points Current Month SI</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_PositivePointCurrentSO__c</fullName>
        <label>BR Positive Points Current Month SO</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_PositivePointPreviousSI__c</fullName>
        <label>BR Positive Points Previous Month SI</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_PositivePointPreviousSO__c</fullName>
        <label>BR Positive Points Previous Month SO</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TerritoryPlanning__c</fullName>
        <label>BR Territory Planning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Territory Planning</fullName>
                </value>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Ballantines</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Montilla</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Orloff</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Teachers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_VisitPlanning__c</fullName>
        <label>BR Visit Planning</label>
        <referenceTo>Planejamento__c</referenceTo>
        <relationshipName>LAT_BR_TPL_TerritoryPlannings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>LAT Territory Planning</label>
    <nameField>
        <displayFormat>PT-{0}</displayFormat>
        <label>Territory Planning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT Territory Plannings</pluralLabel>
    <recordTypes>
        <fullName>LAT_BR_TPL_Standard</fullName>
        <active>true</active>
        <label>BR Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LAT_BR_TPL_VR01_NoUpdateToPlanejamiento</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Name != &apos;Administrador do sistema&apos;
&amp;&amp;
$Profile.Name != &apos;Business administrator&apos;
&amp;&amp;
$Profile.Name != &apos;LAT_BusinessAdministrator&apos;
&amp;&amp;
$Profile.Name != &apos;LAT_BR_Business_Administrator&apos;
&amp;&amp;
$Profile.Name != &apos;LAT_BR2_BusinessAdministrator&apos;
&amp;&amp;
$Profile.Name != &apos;PR BRAZIL System Administrator&apos;
&amp;&amp;
$Profile.Name != &apos;LAT_SystemAdministrator&apos;
&amp;&amp;
NOT(ISNEW())
&amp;&amp;
ISCHANGED(LAT_BR_VisitPlanning__c)</errorConditionFormula>
        <errorDisplayField>LAT_BR_VisitPlanning__c</errorDisplayField>
        <errorMessage>This field can not be modified</errorMessage>
    </validationRules>
</CustomObject>